--- a/internal/gen/doctmpls/provider_constructor_docstring.md.tmpl
+++ b/internal/gen/doctmpls/provider_constructor_docstring.md.tmpl
@@ -8,7 +8,10 @@ the `src` and/or `version` parameters are set.
 
 **Args**:
 {{- range .Params }}
-  - `{{ .Name }}` (`{{ .Typ }}`): {{ .Description }}
+  - `{{ .Name }}` (`{{ .Typ }}`):
+  {{- if .Description }} {{ .Description }}
+  {{- else }} Set the `{{ .Name }}` field on the resulting provider block.
+  {{- end }}
   {{- if .IsOptional }} When `null`, the `{{ .Name }}` {{ if .IsBlock }}sub block{{ else }}field{{ end }} will be omitted from the resulting object.{{ end }}
     {{- if .IsBlock }} When setting the sub block, it is recommended to construct the object using the [{{ $fnPrefix }}.{{ .Name }}.new]({{ .ParamConstructorRef }}) constructor.{{ end }}
 {{- end }}
